<resources>
    <string name="app_name">EPLife</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="loginPass">输入密码</string>
    <string name="loginUnKnow">忘记密码</string>
    <string name="loginReg">注册</string>
    <string name="loginBtn">登陆</string>
    <string name="settint_pwd">设置密码</string>
    <string name="finish">完成</string>
    <string name="input_name">输入账号</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">这是我的中心页面</string>
    <string name="fragement_center_tv_message">消息</string>
    <string name="fragement_center_tv_join_activity">我参与的活动</string>
    <string name="fragement_center_tv_about">关于</string>
</resources>
